# technical-interview-report

./: README.md  constants.py  generate_report.py  pyproject.toml  report.py  sample_interview_template.csv  test_main.py
.github/: CODEOWNERS
.github/workflows/: python-app.yml
