[tool.poetry]
name = "technical-interview-report"
version = "2.0.0"
description = "A report generator tool from technical interview spreadsheets templates."
authors = ["Sergio Infante <raulsergio9@gmail.com>"]
license = "GPL-3.0 License"

[tool.poetry.dependencies]
python = "^3.10"
typer = "^0.4.0"
pyperclip = "^1.8.2"
pytest = "^7.0.1"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
